--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,4 +3,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal">
+
+    <ImageView
+        android:id="@+id/alarmImage"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_alignParentRight="true"
+        android:scaleType="center"
+        android:layout_alignParentTop="true"
+        android:layout_gravity="center"
+        android:src="@drawable/baby_ok"
+        android:visibility="visible">
+    </ImageView>
+
 </LinearLayout>
